objects/ssot__PersonPublicProfile__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AboutMe__c</fullName>
        <label>About me</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactId__c</fullName>
        <label>Contact</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FirstPublishedDateTime__c</fullName>
        <label>First Published</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Person Public Profile Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationText__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonPublicProfilePrefSetId__c</fullName>
        <label>Person Public Profile Preference Set</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PhoneText__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryCredentialNameText__c</fullName>
        <label>Primary Credential Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryCredentialType__c</fullName>
        <label>Primary Credential Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryCredentialYearText__c</fullName>
        <label>Primary Credential Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Pronouns__c</fullName>
        <label>Pronouns</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UsageType__c</fullName>
        <label>Usage Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebsiteURL__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819620033_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonPublicProfile_PersonPublicProf_rel</label>
        <referenceTo>ssot__PersonPublicProfilePrefSet__dlm</referenceTo>
        <relationshipLabel>PersonPublicProfile_PersonPublicProf_rel</relationshipLabel>
        <relationshipName>rel_1719819620033_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291153201_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonPublicProfile_ContactId_map_In_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>PersonPublicProfile_ContactId_map_In_rel</relationshipLabel>
        <relationshipName>rel_1720291153201_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>